# NetworkOffload

./: CMakeLists.txt  LICENSE  README.md
include/: AdditionalTypes.hpp  SimulationClient.hpp  SimulationServer.hpp  ValueContainer.hpp  VariableList.hpp  messages.hpp
include/messages/: AbortMessage.hpp  AbstractMessage.hpp  AddSimMessage.hpp  GetFileMessage.hpp  InitSimulationMessage.hpp  RuntimeMessage.hpp  ValueContainerMessage.hpp  messages.hpp
include/network_impl/: NetworkClient.hpp  NetworkMember.hpp  NetworkServer.hpp  SimNetworkFunctions.hpp
src/: SimulationClient.cpp  SimulationServer.cpp  ValueContainer.cpp  VariableList.cpp
src/messages/: AddSimMessage.cpp  GetFileMessage.cpp  InitSimulationMessage.cpp  RuntimeMessage.cpp  ValueContainerMessage.cpp
src/network_impl/: NetworkClient.cpp  NetworkMember.cpp  NetworkServer.cpp  SimNetworkFunctions.cpp
test/: NetOffBenchmark.cpp  SimpleSim.cpp  SimpleSimClient.hpp  SimpleSimServer.hpp  test_src.txt
